Display shipping information done

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,7 @@
 project.title = Shipping Cost
 box.id.label = ID
 box.name.label = Name
-box.regDate.label = Registration date
+box.type.label = Type
+box.country.label = Country
+box.weight.label = Weight
+box.cost.label = Cost
